# sharity

./: .clang-format  .gitignore  LICENSE.txt  PROTOCOL.md  README.md  setup-android.sh
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
client/: .gitignore  CMakeLists.txt  build-wasm.sh  configure-dev.sh  fonts.qrc  icons.qrc  resources.qrc
client/android/: AndroidManifest.xml
client/android/res/drawable/: ic_launcher_foreground.xml
client/android/res/values/: ic_launcher_background.xml
client/bundle/: Info.plist  sharity.icns
client/cmake/: ConfigureCPack.cmake
client/cmake/cpack/bundle/: Info.plist
client/cmake/cpack/nsis/: install.nsi  uninstall.nsi
client/i18n/: qml_de_DE.ts  qml_en_GB.ts  qml_sv_SE.ts
client/icons/material/: index.theme
client/patches/: scode-cmake.patch  scode.patch
client/qml/: Connect.qml  DisplayDecimal.qml  Downloader.qml  GetOtherKey.qml  HandshakeStatus.qml  MainWindow.qml  QrCodePopUp.qml  Sas.qml  SettingsModal.qml  SettingsPopup.qml  Status.qml  Uploader.qml
client/qml/qr/: QrCodePopUp.qml  QrCodeScan.qml
client/qml/utils/: Modal.qml  Toast.qml  ToastPopup.qml
client/src/: DownloaderPeer.cpp  DownloaderPeer.h  MaterialTheme.cpp  MaterialTheme.h  SasSingleton.cpp  SasSingleton.h  SasVerification.cpp  SasVerification.h  UploaderPeer.cpp  UploaderPeer.h  WebSocket.cpp  WebSocket.h  Websocket.h  android.cpp  android.h  certificate.cpp  certificate.h  main.cpp
vodozemac/: .gitignore  Cargo.toml  build.rs
vodozemac/include/: vodozemac.h
vodozemac/include/vodozemac/internals/: ffi.h
vodozemac/src/: lib.cpp  lib.rs
websocket/: .dockerignore  .gitignore  Dockerfile  README.md  mix.exs
websocket/config/: dev.exs  prod.exs  runtime.exs
websocket/lib/sharity/: application.ex  downloaders.ex  router.ex  ws_server.ex
